sfSandBoxCode/force-app/main/default/objects/Item_Specification__c/Item_Specification__c.object-meta.xml
<CustomObject>
    <label>Item Specification</label>
    <nameField>
        <label>Item Specifications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>