sfSandBoxCode/force-app/main/default/objects/Item_Specification__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Item Specifications</relationshipLabel>
    <relationshipName>Item_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>