sfSandBoxCode/force-app/main/default/objects/Item_Specification__c/fields/Procurement_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Request_Line_Item__c</fullName>
    <label>Procurement Request Line Item</label>
    <referenceTo>PTS_Line_Item__c</referenceTo>
    <relationshipLabel>Item Specifications</relationshipLabel>
    <relationshipName>Item_Specifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>