sfSandBoxCode/force-app/main/default/objects/Item_Specification__c/fields/Specification_Type__c.field-meta.xml
<CustomField>
    <fullName>Specification_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specification Type</label>
    <referenceTo>Specification_Type__c</referenceTo>
    <relationshipLabel>Item Specifications</relationshipLabel>
    <relationshipName>Item_Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>